--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ rust: nightly
 
 script:
   - rustc -vV
-  - cargo test --all -- --nocapture -D warnings
+  - RUSTFLAGS="-D warnings" cargo test --all -- --nocapture
   - cargo build
