--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "imagecode"
 version = "0.1.0"
 authors = ["Philipp Hansch <dev@phansch.net>"]
 edition = "2018"
+publish = false
 
 [dependencies]
 qrcode = "=0.10.0"
