--- a/.travis.yml
+++ b/.travis.yml
@@ -26,3 +26,8 @@ deploy:
   on:
     tags: true
     repo: phansch/imagecodes
+
+notifications:
+  email:
+    on_success: never
+    on_failure: always
