--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,8 @@ script:
 
 before_deploy:
   - mkdir $TRAVIS_BUILD_DIR/build_result
-  - tar -czvf $TRAVIS_BUILD_DIR/imagecode.tar.gz $TRAVIS_BUILD_DIR/target/release/imagecode
-  - cp $TRAVIS_BUILD_DIR/imagecode.tar.gz $TRAVIS_BUILD_DIR/build_result/imagecodes-$TRAVIS_TAG
+  - tar -czvf imagecode.tar.gz $TRAVIS_BUILD_DIR/target/release/imagecode
+  - cp imagecode.tar.gz $TRAVIS_BUILD_DIR/build_result/imagecodes-$TRAVIS_TAG
 
 deploy:
   provider: releases
