--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "imagecode"
-version = "0.1.9-alpha.0"
+version = "0.1.9"
 authors = ["Philipp Hansch <dev@phansch.net>"]
 edition = "2018"
 publish = false
