Add two unit tests

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,9 @@ mime = "0.3.13"
 log = "0.4.6"
 env_logger = "0.6.2"
 
+[dev-dependencies]
+pretty_assertions = "0.6.1"
+
 [patch.crates-io]
 tide = { git = "https://github.com/rustasync/tide.git", branch = "master" }
 http-service = { git = "https://github.com/rustasync/http-service", branch = "master" }
