--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,7 +1,13 @@
 ---
 name: Rust
 
-'on': [push]
+'on':
+  pull_request:
+  push:
+    branches:
+      - master
+  schedule:
+    cron: '00 01 * * *'
 
 jobs:
   build:
