--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,14 +1,12 @@
 ---
 name: Rust
-
 on:
   pull_request:
   push:
     branches:
-      - master
+    - master
   schedule:
-    cron:
-      - '00 01 * * *'
+    cron: '00 01 * * *'
 
 jobs:
   build:
