--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,20 +14,17 @@ log = "0.4.6"
 env_logger = "0.6.2"
 
 # Webserver/Async stuff
-tide = { git = "https://github.com/rustasync/tide.git", branch = "master" }
-tide-log = { git = "https://github.com/rustasync/tide.git", branch = "master" }
-futures-preview = "0.3.0-alpha.17"
+tide = "0.6.0"
+futures = "*"
+http-service = "0.4.0"
+
+[dependencies.async-std]
+version = "1.0.0"
+features = ["attributes"]
 
 [dev-dependencies]
 pretty_assertions = "0.6.1"
-http-service = { git = "https://github.com/rustasync/http-service", branch = "master" }
-http-service-mock = { git = "https://github.com/rustasync/http-service", branch = "master" }
-
-[patch.crates-io]
-tide = { git = "https://github.com/rustasync/tide.git", branch = "master" }
-http-service = { git = "https://github.com/rustasync/http-service", branch = "master" }
-http-service-hyper = { git = "https://github.com/rustasync/http-service", branch = "master" }
-http-service-mock = { git = "https://github.com/rustasync/http-service", branch = "master" }
+http-service-mock = "0.4.0"
 
 [profile.dev]
 opt-level = 2
