--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -31,6 +31,7 @@ jobs:
           args: --all -- --nocapture
 
       - name: Build Release
+        if: startsWith(github.ref, 'refs/tags/')
         uses: actions-rs/cargo@v1
         with:
           command: build
