--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "imagecode"
+name = "imagecodes"
 version = "0.3.1-alpha.0"
 authors = ["Philipp Hansch <dev@phansch.net>"]
 edition = "2018"
