--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ features = ["attributes"]
 [dev-dependencies]
 pretty_assertions = "0.6.1"
 http-service-mock = "0.4.0"
+proptest = "0.9.4"
 
 [profile.dev]
 opt-level = 2
