--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,11 +12,11 @@ mime = "0.3.13"
 
 log = "0.4.6"
 env_logger = "0.7.1"
+proptest = "0.9.4"
 
 # Webserver/Async stuff
-tide = "0.6.0"
-futures = "*"
-http-service = "0.4.0"
+tide = "0.7.0"
+http-types = "1.0.1"
 
 [dependencies.async-std]
 version = "1.5.0"
@@ -24,8 +24,7 @@ features = ["attributes"]
 
 [dev-dependencies]
 pretty_assertions = "0.6.1"
-http-service-mock = "0.4.0"
-proptest = "0.9.4"
+http-service-mock = "0.5.0"
 
 [profile.dev]
 opt-level = 2
