--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -44,7 +44,7 @@ jobs:
         run: mkdir /tmp/build_result
       - name: Package Release
         if: startsWith(github.ref, 'refs/tags/')
-        run: cd target/release && tar -czvf imagecodes.tar.gz imagecode
+        run: cd target/release && tar -czvf imagecodes.tar.gz imagecodes
       - name: Copy Package
         if: startsWith(github.ref, 'refs/tags/')
         run: cp target/release/imagecodes.tar.gz /tmp/build_result/imagecodes-$GIT_TAG.tar.gz
