--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "imagecodes"
-version = "0.6.1-alpha.0"
+version = "0.6.1"
 authors = ["Philipp Hansch <dev@phansch.net>"]
 edition = "2018"
 publish = false
