--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,5 +24,5 @@ features = ["attributes"]
 [dev-dependencies]
 pretty_assertions = "0.6.1"
 
-[profile.dev]
-opt-level = 2
+[profile.dev.package.difference]
+opt-level = 3
