Fix setting of GIT_TAG

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -41,7 +41,7 @@ jobs:
           args: --release
 
       - name: Set GIT_TAG env
-        run: echo ::set-env name=GIT_TAG::$(echo ${GITHUB_REF:10})
+        run: echo "GIT_TAG=$(echo ${GITHUB_REF:10})" >> $GITHUB_ENV
       - name: Create tmp dir
         if: startsWith(github.ref, 'refs/tags/')
         run: mkdir /tmp/build_result
